--- a/src/app/components/missionlist/missionlist.component.html
+++ b/src/app/components/missionlist/missionlist.component.html
@@ -4,7 +4,7 @@
         <mat-card-title>{{ launch.mission_name }}</mat-card-title>
         <mat-card-subtitle>Year: {{ launch.launch_year }}</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image [src]="launch.links.mission_patch_small" alt="Mission Patch">
+      <img mat-card-image [src]="launch.links.mission_patch_small" alt="Mission Patch" style="max-width: 100px; height: auto;">
       <mat-card-content>
         <p>{{ launch.details }}</p>
         <p><b>Rocket:</b> {{ launch.rocket.rocket_name }} ({{ launch.rocket.rocket_type }})</p>
